--- a/styles/index.html
+++ b/styles/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang = "pt-br">
     <head>
-        <title> Techbook </title>
+        <title> Tech ebooks </title>
         <meta charset = "utf-8">
+        <meta name="viewport" content="width-device-widthm initial-scale=1.0">
+        <link rel="stylesheet" href="main.css">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
         <script scr = "netflix/js/script.js"> </script>
+        <header>
+            <div class ="container">
+                <h1> <img src="logotext.png" alt="Logotipo da página" width="300x" ></h1>
+                <h1><b> <nav>
+                    <a href="#">Inicio</a>
+                    <a href="#">Front-end</a> 
+                    <a href="#">Back-end</a> 
+                    <a href="#">Mobile</a> 
+                </h1></b></nav>
+            </div>
+        </header>
     </body>
 </html>
