--- a/styles/index.html
+++ b/styles/index.html
@@ -11,14 +11,29 @@
         <script scr = "netflix/js/script.js"> </script>
         <header>
             <div class ="container">
-                <h1> <img src="logotext.png" alt="Logotipo da página" width="300x" ></h1>
-                <h1><b> <nav>
+                <h1> <img src="/img/imlogo.png" alt="Logotipo da página" width="200x" ></h1>
+                <div class = "logoname">
+                    <h1>Wikitech Ebooks </h1>
+                </div>
+                <h1><nav class="selecao">
                     <a href="#">Inicio</a>
-                    <a href="#">Front-end</a> 
+                    <a href="Front-end.html">Front-end</a> 
                     <a href="#">Back-end</a> 
                     <a href="#">Mobile</a> 
-                </h1></b></nav>
+                </h1></nav>
             </div>
         </header>
+        <main>
+            <div class="filme-principal">
+                <div class="container">
+                    <h3 class="titulo">
+                        Clean Code
+                    </h3>
+                    <p class="descricao">
+                        Clean Code, ou Código Limpo, é uma filosofia de desenvolvimento de softwares que consiste em aplicar técnicas simples que facilitam a escrita e a leitura de um código. Tornando-o, assim, de fácil compreensão.
+                    </p>
+                </div>
+            </div>  
+        </main>
     </body>
 </html>
