--- a/styles/index.html
+++ b/styles/index.html
@@ -3,12 +3,11 @@
     <head>
         <title> Tech ebooks </title>
         <meta charset = "utf-8">
-        <meta name="viewport" content="width-device-widthm initial-scale=1.0">
         <link rel="stylesheet" href="main.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
-        <script scr = "netflix/js/script.js"> </script>
+        <script src="/js/script.js"></script>
         <header>
             <div class ="container">
                 <h1> <img src="/img/imlogo.png" alt="Logotipo da página" width="200x" ></h1>
