--- a/styles/index.html
+++ b/styles/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang = "pt-br">
+
     <head>
         <title> Tech ebooks </title>
         <meta charset = "utf-8">
         <link rel="stylesheet" href="main.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     </head>
+
     <body>
-        <script src="/js/script.js"></script>
+
+        <script src="../js/script.js"></script>
+
         <header>
-            <div class ="container">
-                <h1> <img src="/img/imlogo.png" alt="Logotipo da página" width="200x" ></h1>
-                <div class = "logoname">
-                    <h1>Wikitech Ebooks </h1>
+            <div>
+                <div class ="container">
+                    <div class = "logopagina"> 
+                        <h1><img src="../img/imlogo.png" alt="Logotipo da página" width="30%" ></h1>
+                    </div>
+                    <div class = "logoname">
+                        <h1>Wikitech Ebooks </h1>
+                    </div>
                 </div>
-                <h1><nav class="selecao">
-                    <a href="#">Inicio</a>
-                    <a href="Front-end.html">Front-end</a> 
-                    <a href="#">Back-end</a> 
-                    <a href="#">Mobile</a> 
-                </h1></nav>
-            </div>
+                <h2><nav class="selecao">
+                        <a href="Front-end.html">Front</a> 
+                        <a href="#">Back</a> 
+                        <a href="#">Mobile</a> 
+                        <a href="#">Games</a>
+                        <a href="#">Automação</a>  
+                </h2></nav>
+            </div>            
         </header>
+
         <main>
             <div class="filme-principal">
                 <div class="container">
@@ -34,5 +44,7 @@
                 </div>
             </div>  
         </main>
+
     </body>
+
 </html>
