Atualizou link dos cartazes

--- a/index.html
+++ b/index.html
@@ -35,14 +35,18 @@
                 <h3 class="titulo">HOUSE OF CARDS</h3>
                 <p class="descricao">Nada pode impedir o político sem escrúpulos Frank Underwood de conquistar Washington. Assista agora a nova temporada de House of Cards que está imperdível.</p>
                 <div class="botoes">
-                    <button role="button" class="botao">
-                        <i class="fas fa-play"></i>
-                        ASSISTIR AGORA
-                    </button>
-                    <button role="button" class="botao">
-                        <i class="fas fa-info-circle"></i>
-                        MAIS INFORMAÇÕES
-                    </button>
+                    <a href="https://www.netflix.com/watch/70248289">
+                        <button role="button" class="botao">
+                            <i class="fas fa-play"></i>
+                            ASSISTIR AGORA
+                        </button>
+                    </a>
+                    <a href="https://www.netflix.com/title/70248289">
+                        <button role="button" class="botao">
+                            <i class="fas fa-info-circle"></i>
+                            MAIS INFORMAÇÕES
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -51,34 +55,54 @@
     <div class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
                 <div class="item">
-                    <img class="box-filme" src="img/mini1.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/title/80186863">
+                        <img class="box-filme" src="img/mini1.jpg" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini2.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/watch/70248289">
+                        <img class="box-filme" src="img/mini2.jpg" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini3.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/watch/81198528">
+                        <img class="box-filme" src="img/mini3.jpg" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini4.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/watch/70248289">
+                        <img class="box-filme" src="img/mini4.jpg" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini5.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/watch/70248289">
+                        <img class="box-filme" src="img/mini5.jpg" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini6.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/watch/70248289">
+                        <img class="box-filme" src="img/mini6.jpg" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini7.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/watch/70248289">
+                        <img class="box-filme" src="img/mini7.jpg" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini8.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/watch/70248289">
+                        <img class="box-filme" src="img/mini8.jpg" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini9.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/watch/70248289">
+                        <img class="box-filme" src="img/mini9.jpg" alt="" srcset="">
+                    </a>
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini10.jpg" alt="" srcset="">
+                    <a href="https://www.netflix.com/watch/70248289">
+                        <img class="box-filme" src="img/mini10.jpg" alt="" srcset="">
+                    </a>
                 </div>
         </div>
     </div>
