--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a href="https://www.netflix.com/watch/70248289">
                         <button role="button" class="botao">
                             <i class="fas fa-play"></i>
-                            ASSISTIR AGORA
+                            ASSISTIR AGORA!
                         </button>
                     </a>
                     <a href="https://www.netflix.com/title/70248289">
